fix: credit logo vertical align

--- a/css/_credit-logo.sass
+++ b/css/_credit-logo.sass
@@ -12,4 +12,4 @@
     width: 1.5em
     display: inline-block
     margin: 0 .25em -.33em .33em
-
+    vertical-align: top
